static/gitcard.css
#project_list{
    color: white;
    width: 95%;

    display: grid;
    --card-width: 45%;
    grid-template-columns: var(--card-width) var(--card-width);
    justify-content: center;
    grid-gap: 2vw 2vh;

/*    border: 2px solid red;*/
}

.card {
    overflow: hidden;
    border: 1px solid var(--background-500);
    border-radius: 10px;
    margin-bottom: 2%;
    width: 100%;
    height: 100%;
}
.card:not(:last-child) {
  margin-bottom: 0.8%;
}

.card_link {
    display: block;
    padding: 3% 2%;
    background-color: var(--background-50);
/*    background-color: ;*/
    overflow: hidden;
    position: relative;
    height: 100%;
}

.card_link:hover .card_date .card_title .card_description{
    text-decoration: none;
    color: #FFF;
}

.card_link:hover .card_bg {
    transform: translate(0vw, 60%) scale(3);
    width: 100%; height: 100%;
}

.card_title {
    font-weight: bold;
    font-size: 30px;
    color: var(--text-700);
    margin-bottom: 10px;
}

.card_description{
    margin-bottom: 10px;
    color: var(--secondary-500);
    margin-left: 1%
}

.card_date_box {
    font-size: 18px;
    color: var(--text-600);
    z-index: 2;
    position: relative;
}

.card_date {
    font-weight: bold;
    color: var(--text-600);

    transition: color .5s ease
}

.card_bg {
    height: 128px;
    width: 128px;
    background-color: #f9b23430;

    z-index: 1;
    position: absolute;
    top: -75px;
    right: -75px;

    border-radius: 50%;

    transition: all .5s ease;
}
/*
.card:nth-child(2n) .card_bg {
    background-color: #3ecd5e30;
}

.card:nth-child(3n) .card_bg {
    background-color: #e4400230;
}

.card:nth-child(4n) .card_bg {
    background-color: #952aff30;
}

.card:nth-child(5n) .card_bg {
    background-color: #cd3e9430;
}

.card:nth-child(6n) .card_bg {
    background-color: #4c49ea30;
}
*/


/*.card:nth-child(1n) .card_bg {
    background-color: color-mix(in srgb, var(--primary-400), transparent 66%);
}
*/
.card:nth-child(2n) .card_bg {
    background-color: color-mix(in srgb, var(--primary-500), transparent 66%);
}

.card:nth-child(3n) .card_bg {
    background-color: color-mix(in srgb, var(--secondary-500), transparent 66%);
}

.card:nth-child(4n) .card_bg {
    background-color: color-mix(in srgb, var(--accent-500), transparent 66%);
}

.card:nth-child(5n) .card_bg {
    background-color: color-mix(in srgb, var(--text-500), transparent 66%);
}
/*
.card:nth-child(6n) .card_bg {
    background-color: color-mix(in srgb, var(--secondary-800), transparent 66%);
}

.card:nth-child(7n) .card_bg {
    background-color: color-mix(in srgb, var(--primary-800), transparent 66%);
}
*/

